--- a/U3AAttendanceSystem/U3A_Attendance_System/Views/CourseInstanceEditView.xaml
+++ b/U3AAttendanceSystem/U3A_Attendance_System/Views/CourseInstanceEditView.xaml
@@ -126,36 +126,70 @@
                         <GroupBox Header="Record Members Attendance">
                             <Grid>
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition />
-                                    <ColumnDefinition />
+                                    <ColumnDefinition Width="85" />
+                                    <ColumnDefinition Width="85" />
+                                    <ColumnDefinition Width="85" />
                                 </Grid.ColumnDefinitions>
                                 <Grid.RowDefinitions>
                                     <RowDefinition />
                                     <RowDefinition />
                                 </Grid.RowDefinitions>
                                 <Label Content="Member #" Grid.Column="0" Grid.Row="0" />
+                                <Label Content="Presence" Grid.Column="1" Grid.Row="0" />
                                 <TextBox Name="MemberId" Grid.Column="0" Grid.Row="1" />
-                                <Button Name="AddAttendance" Content="Add Attendance" Grid.Column="1" Grid.Row="1" />
+                                <ComboBox Name="Presence" Grid.Column="1" Grid.Row="1" />
+                                <Button Name="AddAttendance" Content="Add Attendance" Grid.Column="2" Grid.Row="1" />
                             </Grid>
                         </GroupBox>
                     </Grid>
                     
                     <Grid Grid.Row="2" Grid.ColumnSpan="3">
-                        <!--<DataGrid Name="CISessions">
-                            <DataGridCell Content="{Binding Path=Date}"></DataGridCell>
-                        </DataGrid>       -->
-                        <HeaderedItemsControl Name="CISessions" Header="Session Dates">
-                            <ItemsControl.ItemTemplate>
-                                <DataTemplate>
-                                    <Label Content="{Binding Date}" />
-                                </DataTemplate>
-                            </ItemsControl.ItemTemplate>
-                            <ItemsControl.ItemsPanel>
-                                <ItemsPanelTemplate>
-                                    <StackPanel Orientation="Horizontal" />
-                                </ItemsPanelTemplate>
-                            </ItemsControl.ItemsPanel>
-                        </HeaderedItemsControl>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition />
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition />
+                                <RowDefinition />
+                            </Grid.RowDefinitions>
+
+                            <Label Content="Member No" Grid.Row="0" Grid.Column="0" />
+                            <Grid Grid.Row="0" Grid.Column="1">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition />
+                                    <RowDefinition />
+                                </Grid.RowDefinitions>
+                                <Label Content="Session Dates" Grid.Row="0" HorizontalAlignment="Center" />
+                                <ItemsControl Name="CISessions" Grid.Row="1">
+                                    <ItemsControl.ItemTemplate>
+                                        <DataTemplate>
+                                            <Grid>
+                                                <Grid.RowDefinitions>
+                                                    <RowDefinition />
+                                                    <RowDefinition />
+                                                </Grid.RowDefinitions>
+                                                <Label Content="{Binding Date}" Grid.Row="0" />
+                                                <ItemsControl ItemsSource="{Binding Path=Attendances}" Grid.Row="1">
+                                                    <ItemsControl.ItemTemplate>
+                                                        <DataTemplate>
+                                                            <Label Content="{Binding Presence}" />
+                                                        </DataTemplate>
+                                                    </ItemsControl.ItemTemplate>
+                                                </ItemsControl>
+                                            </Grid>
+                                        </DataTemplate>
+                                    </ItemsControl.ItemTemplate>
+                                    <ItemsControl.ItemsPanel>
+                                        <ItemsPanelTemplate>
+                                            <StackPanel Orientation="Horizontal" />
+                                        </ItemsPanelTemplate>
+                                    </ItemsControl.ItemsPanel>
+                                </ItemsControl>
+                            </Grid>
+
+                        </Grid>
+                        
                     </Grid>
 
                 </Grid>
