--- a/U3AAttendanceSystem/U3A_Attendance_System/Views/CourseInstanceEditView.xaml
+++ b/U3AAttendanceSystem/U3A_Attendance_System/Views/CourseInstanceEditView.xaml
@@ -137,7 +137,7 @@
                                 <Label Content="Member #" Grid.Column="0" Grid.Row="0" />
                                 <Label Content="Presence" Grid.Column="1" Grid.Row="0" />
                                 <TextBox Name="MemberId" Grid.Column="0" Grid.Row="1" />
-                                <ComboBox Name="Presence" Grid.Column="1" Grid.Row="1" />
+                                <ComboBox Name="Presences" Grid.Column="1" Grid.Row="1" />
                                 <Button Name="AddAttendance" Content="Add Attendance" Grid.Column="2" Grid.Row="1" />
                             </Grid>
                         </GroupBox>
