--- a/U3A_Attendance_System/Views/VenueEditView.xaml
+++ b/U3A_Attendance_System/Views/VenueEditView.xaml
@@ -1,19 +1,56 @@
 ﻿<UserControl x:Class="U3A_Attendance_System.Views.VenueEditView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:cal="http://www.caliburnproject.org">
-    <Grid Height="284" Width="268">
+             xmlns:cal="http://www.caliburnproject.org"
+              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+            Height="350" Width="550">
+    <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="81*"/>
-            <ColumnDefinition Width="619*"/>
+            <ColumnDefinition Width="250"/>
+            <ColumnDefinition Width="250" />
         </Grid.ColumnDefinitions>
-        <TextBox Name="Description" HorizontalAlignment="Left" Height="35" Margin="10,39,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="198" Grid.ColumnSpan="2"/>
-        <TextBox Name="Address" HorizontalAlignment="Left" Height="35" Margin="10,39,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="198" Grid.ColumnSpan="2"/>
-        <TextBox Name="CodeId" HorizontalAlignment="Left" Height="35" Margin="10,21,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="198" Grid.ColumnSpan="2"/>
-        <ComboBox Name="Regions" DisplayMemberPath="Description" SelectedValuePath="Id" cal:Message.Attach="UpdateSuburbs(Regions.SelectedValue)" Margin="10,79,60,183" Grid.ColumnSpan="2"/>
-        <ComboBox Name="Suburbs" DisplayMemberPath="Name" SelectedValuePath="Id" cal:Message.Attach="UpdateVenues" IsEnabled="{Binding Path=IsSuburbsEnabled}" Margin="10,106,60,150" Grid.ColumnSpan="2"/>
-        <ComboBox Name="Venues" DisplayMemberPath="Name" SelectedValuePath="Id" cal:Message.Attach="UpdateLocations(Venues.SelectedValue)" IsEnabled="{Binding Path=IsVenuesEnabled}" Margin="10,139,60,122" Grid.ColumnSpan="2" />
-        <Button  Name="Update" Content="Save" HorizontalAlignment="Left" Margin="38,260,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
+        <GroupBox  Grid.Column="0" Header="Venue Management">
+         
+            <Grid>
 
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="50" />
+                    <RowDefinition Height="30" />
+                    <RowDefinition  Height="30"/>
+                    <RowDefinition Height="30" />
+                    <RowDefinition Height="30" />
+                    <RowDefinition Height="50" />
+                </Grid.RowDefinitions>
+
+                <TextBox Name="VenueName" HorizontalAlignment="Left"  Text="Name" TextWrapping="Wrap" VerticalAlignment="Top" Width="198" Grid.Row="1" />
+                <TextBox Name="Address" HorizontalAlignment="Left" Text="Address" TextWrapping="Wrap" VerticalAlignment="Top" Width="198" Grid.Row="2" />
+                <TextBox Name="CodeId" HorizontalAlignment="Left" Text="Code" TextWrapping="Wrap" VerticalAlignment="Top" Width="198"  Grid.Row="3" />
+                <ComboBox Name="Regions" DisplayMemberPath="Description" SelectedValuePath="Id" cal:Message.Attach="UpdateSuburbs(Regions.SelectedValue)" Width="198" Grid.Row="4" VerticalAlignment="Top" HorizontalAlignment="Left"   />
+                <ComboBox Name="Suburbs" DisplayMemberPath="Name" SelectedValuePath="Id" IsEnabled="{Binding Path=IsSuburbsEnabled}" Grid.Row="5"  Width="198" VerticalAlignment="Top" HorizontalAlignment="Left"/>
+                <Button  Name="Update" Content="Save" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="75" Margin="0,51,0,-21"  Grid.Column="0" Grid.Row="5"/>
+
+
+            </Grid>
+        </GroupBox>
+        <GroupBox Header="Location Management" Grid.Column="1" Margin="38,0,-38,0" IsEnabled="{Binding Path=IsLocationManagementEnabled}">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="50" />
+                    <RowDefinition Height="30" />
+                    <RowDefinition />
+
+                </Grid.RowDefinitions>
+                
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition Width="25"/>
+                </Grid.ColumnDefinitions>
+                
+                <TextBox Name="RoomName" Text="Room" Grid.Row="1" Grid.Column="0" VerticalAlignment="Top"  Width="200" HorizontalAlignment="Left"></TextBox>
+                <Button Content="+" Grid.Row="1" Grid.Column="1" VerticalAlignment="Top" cal:Message.Attach="UpdateLocations"></Button>
+                <ListBox Name="ListOfLocations" Grid.Row="2" Grid.Column="0" Margin="0,0,14,178" />
+            </Grid>
+        </GroupBox>
     </Grid>
 </UserControl>
