--- a/U3A_Attendance_System/Views/CourseInstanceEditView.xaml
+++ b/U3A_Attendance_System/Views/CourseInstanceEditView.xaml
@@ -26,7 +26,7 @@
             </StackPanel>
             <GroupBox Header="Course Information" Grid.Row="1">
 
-                <Grid>
+                <Grid Margin="0,0,0,-30">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition />
                         <ColumnDefinition />
@@ -44,21 +44,24 @@
 
 
 
-                    <Label Content="Course Code" Grid.Column="0" Grid.Row="0" />
+                    <Label Content="Coordinator" Grid.Column="0" Grid.Row="0" />
                     <Label Content="Start Date" Grid.Column="1" Grid.Row="0" />
                     <Label Content="Region" Grid.Column="2" Grid.Row="0" />
                     <Label Content="Suburb" Grid.Column="3" Grid.Row="0" />
                     <Label Content="Venue" Grid.Column="4" Grid.Row="0" />
                     <Label Content="Location" Grid.Column="5" Grid.Row="0" />
-                    <Label Content="Coordinator" Grid.Column="6" Grid.Row="0" />
+                    <Label Content="Course Code" Grid.Column="6" Grid.Row="0" />
 
-                    <TextBox Name="CourseCode" Grid.Column="0" Grid.Row="1" />
+
+                    <ComboBox Name="Coordinators" Grid.Column="0" Grid.Row="1" DisplayMemberPath="Name" SelectedValuePath="Id"  />
                     <DatePicker Name="StartDate" Text="Choose a date..."  Grid.Column="1" Grid.Row="1" />
                     <ComboBox Name="Regions" Grid.Column="2" Grid.Row="1" DisplayMemberPath="Description" SelectedValuePath="Id" cal:Message.Attach="UpdateSuburbs(Regions.SelectedValue)"/>
                     <ComboBox Name="Suburbs" Grid.Column="3" Grid.Row="1" DisplayMemberPath="Name" SelectedValuePath="Id" cal:Message.Attach="UpdateVenues" IsEnabled="{Binding Path=IsSuburbsEnabled}"/>
                     <ComboBox Name="Venues" Grid.Column="4" Grid.Row="1" DisplayMemberPath="Name" SelectedValuePath="Id" cal:Message.Attach="UpdateLocations(Venues.SelectedValue)" IsEnabled="{Binding Path=IsVenuesEnabled}" />
                     <ComboBox Name="Locations" Grid.Column="5" Grid.Row="1" DisplayMemberPath="Room" SelectedValuePath="Id" IsEnabled="{Binding Path=IsLocationsEnabled}" />
-                    <ComboBox Name="Coordinators" Grid.Column="6" Grid.Row="1" DisplayMemberPath="Name" SelectedValuePath="Id"  />
+                    <TextBox Name="CourseCode" Grid.Column="6" Grid.Row="1" />
+
+                    <Button Name="GenerateCourseCode" Content="Generate Course Code" Grid.Row="2" Grid.Column="6" />
 
                     <StackPanel Orientation="Horizontal" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Top">
                         <Button Content="Cancel" />
