--- a/U3A_Attendance_System/Views/CourseInstanceEditView.xaml
+++ b/U3A_Attendance_System/Views/CourseInstanceEditView.xaml
@@ -10,8 +10,9 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="0.5*" />
-            <RowDefinition Height="1*" />
+            <RowDefinition Height="140" />
+            <RowDefinition Height="110" />
+            <RowDefinition />
         </Grid.RowDefinitions>
         <!--Course Instance Management-->
         <Grid Grid.Row="0" VerticalAlignment="Top">
@@ -74,6 +75,7 @@
         <!--Sessions Management-->
         <Grid Grid.Row="1" IsEnabled="{Binding Path=IsSessionsEditEnabled}">
             <GroupBox Header="Sessions &amp; Attendance">
+                <!-- Sessions Specific -->
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition />
@@ -81,8 +83,6 @@
                         <ColumnDefinition />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition />
-                        <RowDefinition Height="75" />
                         <RowDefinition />
                     </Grid.RowDefinitions>
 
@@ -130,38 +130,45 @@
                             <Button Content="Delete" Grid.Row="1" Grid.Column="2" />
                         </Grid>
                     </GroupBox>
-
-                    <Grid Grid.Row="1" Grid.Column="2" HorizontalAlignment="Stretch">
-                        <GroupBox Header="Record Members Attendance">
-                            <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition />
-                                    <ColumnDefinition />
-                                    <ColumnDefinition />
-                                    <ColumnDefinition />
-                                </Grid.ColumnDefinitions>
-                                <Grid.RowDefinitions>
-                                    <RowDefinition />
-                                    <RowDefinition />
-                                </Grid.RowDefinitions>
-                                <Label Content="Member #" Grid.Column="0" Grid.Row="0" />
-                                <Label Content="Session" Grid.Column="1" Grid.Row="0" />
-                                <Label Content="Presence" Grid.Column="2" Grid.Row="0" />
-                                <TextBox Name="MemberId" Grid.Column="0" Grid.Row="1" />
-                                <ComboBox ItemsSource="{Binding Sessions}" SelectedItem="{Binding SessionOfAttendance, Mode=TwoWay}" DisplayMemberPath="Date" Grid.Column="1" Grid.Row="1" />
-                                <ComboBox ItemsSource="{Binding Presences}" SelectedItem="{Binding SelectedPresence, Mode=TwoWay}" Grid.Column="2" Grid.Row="1" />
-                                <Button Name="AddAttendance" Content="Add Attendance" Grid.Column="3" Grid.Row="1" />
-                            </Grid>
-                        </GroupBox>
-                    </Grid>
-                    
-                    <Grid Grid.Row="2" Grid.ColumnSpan="3">
-                        <DataGrid Name="Attendances" Grid.Row="1" Grid.ColumnSpan="2" HeadersVisibility="None">
-                        </DataGrid>
-                    </Grid>
-
                 </Grid>
             </GroupBox>
+        </Grid>
+        <Grid Grid.Row="2" IsEnabled="{Binding IsAttendanceEnabled}">
+            <!--Attendance Related-->
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="80" />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <Grid>
+                    <GroupBox Header="Record Members Attendance" HorizontalAlignment="Left" VerticalAlignment="Top">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition />
+                                <ColumnDefinition />
+                                <ColumnDefinition />
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition />
+                                <RowDefinition />
+                            </Grid.RowDefinitions>
+                            <Label Content="Member #" Grid.Column="0" Grid.Row="0" />
+                            <Label Content="Session" Grid.Column="1" Grid.Row="0" />
+                            <Label Content="Presence" Grid.Column="2" Grid.Row="0" />
+                            <TextBox Name="MemberId" Grid.Column="0" Grid.Row="1" />
+                            <ComboBox ItemsSource="{Binding Sessions}" SelectedItem="{Binding SessionOfAttendance, Mode=TwoWay}" DisplayMemberPath="Date" Grid.Column="1" Grid.Row="1" />
+                            <ComboBox ItemsSource="{Binding Presences}" SelectedItem="{Binding SelectedPresence, Mode=TwoWay}" Grid.Column="2" Grid.Row="1" />
+                            <Button Name="AddAttendance" Content="Add Attendance" Grid.Column="3" Grid.Row="1" />
+                        </Grid>
+                    </GroupBox>
+                </Grid>
+
+                <Grid Grid.Row="2" Grid.ColumnSpan="3">
+                    <DataGrid Name="Attendances" Grid.Row="1" Grid.ColumnSpan="2" HeadersVisibility="None">
+                    </DataGrid>
+                </Grid>
+            </Grid>
         </Grid>
     </Grid>
 </UserControl>
