--- a/U3A_Attendance_System/Views/VenueEditView.xaml
+++ b/U3A_Attendance_System/Views/VenueEditView.xaml
@@ -1,15 +1,22 @@
-﻿<UserControl x:Class="U3A_Attendance_System.Views.VenueEditView"
+﻿<Window x:Class="U3A_Attendance_System.Views.VenueEditView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:cal="http://www.caliburnproject.org"
-              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-            Height="350" Width="550">
+             WindowStyle="None"
+             WindowStartupLocation="CenterScreen" 
+             SizeToContent="WidthAndHeight" 
+             Height="350" Width="550">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="250"/>
             <ColumnDefinition Width="250" />
         </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition Height="40" />
+        </Grid.RowDefinitions>
         <GroupBox  Grid.Column="0" Header="Venue Management">
          
             <Grid>
@@ -52,5 +59,6 @@
                 <ListBox Name="ListOfLocations" Grid.Row="2" Grid.Column="0" Margin="0,0,14,178" />
             </Grid>
         </GroupBox>
+        <Button Content="Cancel" Click="Cancel_Click" Grid.Column="0" Grid.Row="1" />
     </Grid>
-</UserControl>
+</Window>
