--- a/U3A_Attendance_System/Views/VenueEditView.xaml
+++ b/U3A_Attendance_System/Views/VenueEditView.xaml
@@ -8,6 +8,56 @@
              WindowStartupLocation="CenterScreen" 
              SizeToContent="WidthAndHeight" 
              Height="370" Width="550">
+    
+    <Window.Resources>
+        <Style x:Key="myErrorTemplate" TargetType="Control">
+            <Setter Property="Validation.ErrorTemplate">
+                <Setter.Value>
+                    <ControlTemplate>
+                        <DockPanel LastChildFill="True">
+                            <Ellipse DockPanel.Dock="Right" 
+										ToolTip="{Binding ElementName=myTextbox, 
+										Path=AdornedElement.(Validation.Errors)[0].ErrorContent}"
+										Width="15"
+										Height="15" 
+										Margin="-25,0,0,0"
+										StrokeThickness="1" 
+										Fill="Red">
+                                <Ellipse.Stroke>
+                                    <LinearGradientBrush EndPoint="1,0.5" StartPoint="0,0.5">
+                                        <GradientStop Color="#FFFA0404" Offset="0"/>
+                                        <GradientStop Color="#FFC9C7C7" Offset="1"/>
+                                    </LinearGradientBrush>
+                                </Ellipse.Stroke>
+                                <Ellipse.Triggers>
+                                    <EventTrigger RoutedEvent="FrameworkElement.Loaded">
+                                        <BeginStoryboard Storyboard="{StaticResource FlashErrorIcon}"/>
+                                    </EventTrigger>
+                                </Ellipse.Triggers>
+
+                            </Ellipse>
+                            <TextBlock DockPanel.Dock="Right" 
+								ToolTip="{Binding ElementName=myControl, 
+									 Path=AdornedElement.(Validation.Errors)[0].ErrorContent}"
+								Foreground="White"
+								FontSize="11pt" 
+								Margin="-15,5,0,0" FontWeight="Bold">!
+                            </TextBlock>
+                            <Border BorderBrush="Red" BorderThickness="1">
+                                <AdornedElementPlaceholder Name="myControl"/>
+                            </Border>
+                        </DockPanel>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+
+        </Style>
+        <Style TargetType="TextBox" BasedOn="{StaticResource myErrorTemplate}" >
+            <Setter Property="Margin" Value="2"/>
+            <Setter Property="SnapsToDevicePixels" Value="True"/>
+            <Setter Property="HorizontalAlignment" Value="Stretch"/>
+        </Style>
+    </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="250"/>
@@ -34,12 +84,13 @@
                 <Label Content="Address" Margin="0,26,177,1" Grid.Row="1"/>
                 <TextBox Name="Address" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Width="198" Grid.Row="2" />
                 <Label Content="Code" Margin="0,26,177,1" Grid.Row="2"/>
-                <TextBox Name="CodeId" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Width="198"  Grid.Row="3" />
+                <TextBox Name="CodeId" Text="CODE" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Width="198"  Grid.Row="3"/>
                 <Label Content="Region" Margin="0,27,177,0" Grid.Row="3"/>
                 <ComboBox Name="Regions" DisplayMemberPath="Description" SelectedValuePath="Id" cal:Message.Attach="UpdateSuburbs(Regions.SelectedValue)" Width="198" Grid.Row="4" VerticalAlignment="Top" HorizontalAlignment="Left"   />
                 <Label Content="Suburb" Margin="0,27,177,0" Grid.Row="4"/>
                 <ComboBox Name="Suburbs" DisplayMemberPath="Name" SelectedValuePath="Id" IsEnabled="{Binding Path=IsSuburbsEnabled}" Grid.Row="5"  Width="198" VerticalAlignment="Top" HorizontalAlignment="Left"/>
                 <Button  Name="Update" Content="Save" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="75" Margin="0,51,0,-21"  Grid.Column="0" Grid.Row="5"/>
+                <Button Content="Cancel" Click="Cancel_Click" Grid.Column="0" Grid.Row="5" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="75" Margin="100,51,0,-20"/>
 
 
             </Grid>
@@ -62,13 +113,13 @@
                 
                 <Label Content="Room Name" Margin="0,29,131,20" Grid.RowSpan="2"></Label>
                 <TextBox Name="RoomName" Grid.Row="1" Grid.Column="0" VerticalAlignment="Top"  Width="200" HorizontalAlignment="Left"></TextBox>
-                <Button Content="+" Grid.Row="1" Grid.Column="1" VerticalAlignment="Top" cal:Message.Attach="UpdateLocations"></Button>
+                <Button Content="+" Grid.Row="1" Grid.Column="1" VerticalAlignment="Top" cal:Message.Attach="UpdateLocations" HorizontalAlignment="Right" Width="25"/>
                 <Label Content="Rooms"  Grid.Row="2" Margin="0,15,149,109" Grid.RowSpan="2"/>
-                <ListBox Name="ListOfLocations"  DisplayMemberPath="Room" SelectedValuePath="Id" Grid.Row="3" Grid.Column="0" Height="80" VerticalAlignment="Top" />
+                <ListBox Name="ListOfLocations"  DisplayMemberPath="Room"  Height="80" SelectedValuePath="Id" Grid.Row="3" Grid.Column="0" VerticalAlignment="Top" />
                 <Button Content="Delete" Grid.Row="5" Height="25" Width="75" HorizontalAlignment="Left" VerticalAlignment="Top" cal:Message.Attach="DeleteLocation(ListOfLocations.SelectedValue)"></Button>
                 <Button Name="ClearListOfLocations" Content="Clear List" Grid.Row="5" Height="25" Width="75" VerticalAlignment="Top" HorizontalAlignment="Right"> </Button>
             </Grid>
         </GroupBox>
-        <Button Content="Cancel" Click="Cancel_Click" Grid.Column="0" Grid.Row="1" />
+        
     </Grid>
 </Window>
