--- a/U3A_Attendance_System/Views/CourseInstanceEditView.xaml
+++ b/U3A_Attendance_System/Views/CourseInstanceEditView.xaml
@@ -107,8 +107,8 @@
 
                             <DatePicker Name="SessionStartDate" Grid.Column="0" Grid.Row="1" />
                             <Label Name="SessionStartDateDay" Grid.Column="1" Grid.Row="1" />
-                            <ComboBox Text="Frequency..." Grid.Column="2" Grid.Row="1"></ComboBox>
-                            <TextBox Name="txtOccurances" Grid.Column="3" Grid.Row="1" />
+                            <ComboBox Name="SessionFrequency" DisplayMemberPath="Key" Grid.Column="2" Grid.Row="1"></ComboBox>
+                            <TextBox Name="SessionOccurances" Grid.Column="3" Grid.Row="1" />
                             <Button Name="CreateSession" Content="Create" Grid.Column="4" Grid.Row="1" />
                         </Grid>
                     </GroupBox>
@@ -125,9 +125,9 @@
                                 <RowDefinition />
                             </Grid.RowDefinitions>
                             <Label Content="Session" Grid.Row="0" Grid.Column="0" />
-                            <ComboBox Grid.Row="1" Grid.Column="0" />
-                            <Button Content="Edit" Grid.Row="1" Grid.Column="1" />
-                            <Button Content="Delete" Grid.Row="1" Grid.Column="2" />
+                            <ComboBox Name="EditSession" ItemsSource="{Binding Sessions}" DisplayMemberPath="Date" Grid.Row="1" Grid.Column="0" />
+                            <Button cal:Message.Attach="ShowCISessionEdit(EditSession.SelectedValue)" Content="Edit" Grid.Row="1" Grid.Column="1" />
+                            <Button cal:Message.Attach="DeleteSession(EditSession.SelectedValue)" Content="Delete" Grid.Row="1" Grid.Column="2" />
                         </Grid>
                     </GroupBox>
                 </Grid>
