--- a/U3A_Attendance_System/Views/CourseInstanceEditView.xaml
+++ b/U3A_Attendance_System/Views/CourseInstanceEditView.xaml
@@ -47,7 +47,7 @@
 
                     <Label Content="Coordinator" Grid.Column="0" Grid.Row="0" />
                     <Label Content="Start Date" Grid.Column="1" Grid.Row="0" />
-                    <Label Content="Region" Grid.Column="2" Grid.Row="0" />
+                    <Label Content="Region" Grid.Column="4" Grid.Row="2" Grid.ColumnSpan="2" Margin="56,10,94,-11" />
                     <Label Content="Suburb" Grid.Column="3" Grid.Row="0" />
                     <Label Content="Venue" Grid.Column="4" Grid.Row="0" />
                     <Label Content="Location" Grid.Column="5" Grid.Row="0" />
