--- a/U3A_Attendance_System/Views/CourseInstanceSessionEditView.xaml
+++ b/U3A_Attendance_System/Views/CourseInstanceSessionEditView.xaml
@@ -24,16 +24,16 @@
             </Grid.RowDefinitions>
 
             <Label Content="Date" Margin="0,17,37,0"/>
-            <DatePicker Name="SessionStartDate"  Text="{Binding Path=SessionDate}"  Grid.Column="0" Grid.Row="1" Margin="0,0,0,24" />
+            <DatePicker Name="SessionStartDate" SelectedDate="{Binding SelectedDate}"  Grid.Column="0" Grid.Row="1" Margin="0,0,0,24" />
 
-            <Label Content="Venue" Margin="0,38,37,40" Grid.Row="1" Grid.RowSpan="2"/>
-            <ComboBox Name="Venues" DisplayMemberPath="Name" Text="{Binding Path=Venue.Name}" Grid.Column="0" Grid.Row="2" Margin="0,10,0,20" />
+            <Label Content="Venue" Margin="0,38,37,30" Grid.Row="1" Grid.RowSpan="2"/>
+            <ComboBox Name="Venues" DisplayMemberPath="Name" SelectedValuePath="Id" cal:Message.Attach="UpdateLocations" Grid.Column="0" Grid.Row="2" Margin="0,10,0,20" />
 
             <Label Content="Location" Margin="0,46,37,31" Grid.Row="2" Grid.RowSpan="2"/>
-            <ComboBox Name="Locations" DisplayMemberPath="Room" Text="{Binding Path=Location.Room}" Grid.Row="3"  Width="106" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0,19,0,0"/>
+            <ComboBox Name="Locations" DisplayMemberPath="Room" SelectedValuePath="Id" Grid.Row="3"  Width="106" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0,19,0,0"/>
 
-            <Button  Name="Update" Content="Save" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="75" Margin="10,24,0,0"  Grid.Column="0" Grid.Row="4"/>
-            <Button  Name="Cancel" Content="Cancel" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="75" Margin="116,24,0,0"  Grid.Column="0" Grid.Row="4" />
+            <Button  Name="Save" Content="Save" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="75" Margin="10,24,0,0"  Grid.Column="0" Grid.Row="4" Click="Save_Click"/>
+            <Button  Name="Cancel" Content="Cancel" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="75" Margin="116,24,0,0"  Grid.Column="0" Grid.Row="4" Click="Cancel_Click" />
 
 
 
