--- a/U3A_Attendance_System/Views/CourseInstanceSessionEditView.xaml
+++ b/U3A_Attendance_System/Views/CourseInstanceSessionEditView.xaml
@@ -6,10 +6,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              WindowStyle="None"
              WindowStartupLocation="CenterScreen" 
-             SizeToContent="WidthAndHeight" Width="369" Height="356" >
+             SizeToContent="WidthAndHeight" MaxHeight="300" MinHeight="300" MaxWidth="350" MinWidth="350" Height="278.388" >
 
     <GroupBox  Grid.Column="0" Header="Edit Session" Margin="10,10,10,10" Grid.RowSpan="2" ClipToBounds="True">
-        <Grid Height="244" VerticalAlignment="Top">
+        <Grid Height="318" VerticalAlignment="Top" Margin="0,0,0,-12">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
@@ -17,7 +17,7 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="40" />
                 <RowDefinition Height="50" />
-                <RowDefinition  Height="50"/>
+                <RowDefinition Height="50"/>
                 <RowDefinition Height="50" />
                 <RowDefinition Height="50" />
                 <RowDefinition Height="50" />
@@ -32,8 +32,8 @@
             <Label Content="Location" Margin="0,46,37,31" Grid.Row="2" Grid.RowSpan="2"/>
             <ComboBox Name="Locations" DisplayMemberPath="Room" SelectedValuePath="Id" Grid.Row="3"  Width="106" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0,19,0,0"/>
 
-            <Button  Name="Save" Content="Save" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="75" Margin="10,24,0,0"  Grid.Column="0" Grid.Row="4" Click="Save_Click"/>
-            <Button  Name="Cancel" Content="Cancel" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="75" Margin="116,24,0,0"  Grid.Column="0" Grid.Row="4" Click="Cancel_Click" />
+            <Button  Name="Save" Content="Save" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="75" Margin="73,21,0,0"  Grid.Column="0" Grid.Row="4" Click="Save_Click"/>
+            <Button  Name="Cancel" Content="Cancel" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="75" Margin="168,21,0,0"  Grid.Column="0" Grid.Row="4" Click="Cancel_Click" RenderTransformOrigin="0.525,0.362" />
 
 
 
