--- a/U3A_Attendance_System/Views/CoordinatorEditView.xaml
+++ b/U3A_Attendance_System/Views/CoordinatorEditView.xaml
@@ -1,40 +1,51 @@
-﻿<Window x:Class="U3A_Attendance_System.Views.CoordinatorEditView"
+﻿<Controls:MetroWindow x:Class="U3A_Attendance_System.Views.CoordinatorEditView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      Title="Coordinator"
-      WindowStyle="None"
+      xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+      Title="Coordinator Management"
       WindowStartupLocation="CenterScreen" 
-      SizeToContent="WidthAndHeight"
+      ShowMaxRestoreButton="False"
+      ShowMinButton="False"
       mc:Ignorable="d" 
-      d:DesignHeight="400" d:DesignWidth="450" Width="450" Height="400">
+      d:DesignHeight="250" d:DesignWidth="450" Width="450" Height="250">
+
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colours.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
+
+    <Grid>      
+        <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="25"/>
+        <ColumnDefinition Width="400"/>
+    </Grid.ColumnDefinitions>
+    <Grid.RowDefinitions>
+        <RowDefinition />
+        <RowDefinition />
+        <RowDefinition />
+        <RowDefinition />
+        <RowDefinition />
+        <RowDefinition />
+        <RowDefinition Height="50" />
+    </Grid.RowDefinitions>
     
-    <GroupBox Grid.Column="1" Height="370" Header="Coordinator Management">
-        <Grid>      
-            <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="40"/>
-            <ColumnDefinition Width="360"/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="40" />
-            <RowDefinition />
-            <RowDefinition />
-            <RowDefinition />
-            <RowDefinition />
-            <RowDefinition />
-            <RowDefinition />
-            <RowDefinition />
-            <RowDefinition />
-            </Grid.RowDefinitions>
-         <Label Content="Full Name" Grid.Column="1" Grid.Row="1" VerticalAlignment="Bottom" />
-        <TextBox x:Name="Name" TextWrapping="Wrap" VerticalAlignment="Top" Height="25" Grid.Column="1" Grid.Row="2"/>
-        <Label Content="Phone Number" Grid.Column="1" Grid.Row="3" VerticalAlignment="Bottom"/>
-        <TextBox x:Name="Phone" TextWrapping="Wrap" VerticalAlignment="Top" Grid.Column="1" Grid.Row="4" Height="80" />
-        <Label Content="Email" Grid.Column="1" Grid.Row="5" VerticalAlignment="Bottom"/>
-        <TextBox x:Name="Email" TextWrapping="Wrap" VerticalAlignment="Top" Grid.Column="1" Grid.Row="6" Height="80" />
-        <Button  x:Name="Update" Content="Save" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Column="2" Click="Update_Click" Grid.Row="7" />
-        <Button Content="Cancel" HorizontalAlignment="Right" VerticalAlignment="Center"  Click="Update_Click"  Grid.Column="2" Grid.Row="7" />  
+    <Label Content="Full Name" Grid.Column="1" Grid.Row="0" VerticalAlignment="Bottom" />
+    <TextBox x:Name="Name" TextWrapping="Wrap" Height="25" Grid.Column="1" Grid.Row="1"/>
+    <Label Content="Phone Number" Grid.Column="1" Grid.Row="2" VerticalAlignment="Bottom"/>
+    <TextBox x:Name="Phone" TextWrapping="Wrap" VerticalAlignment="Top" Grid.Column="1" Grid.Row="3" Height="25" />
+    <Label Content="Email" Grid.Column="1" Grid.Row="4" VerticalAlignment="Bottom"/>
+    <TextBox x:Name="Email" TextWrapping="Wrap" VerticalAlignment="Top" Grid.Column="1" Grid.Row="5" Height="25" />
+    <Button Content="Cancel" HorizontalAlignment="Left" VerticalAlignment="Center"  Click="Update_Click"  Grid.Column="2" Grid.Row="6" />
+    <Button  x:Name="Update" Content="Save" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Column="2" Click="Update_Click" Grid.Row="6" />  
     </Grid>
-  </GroupBox> 
-</Window>
+
+</Controls:MetroWindow>
