--- a/U3A_Attendance_System/Views/CourseDescriptionEditView.xaml
+++ b/U3A_Attendance_System/Views/CourseDescriptionEditView.xaml
@@ -1,33 +1,42 @@
-﻿<Window x:Class="U3A_Attendance_System.Views.CourseDescriptionEditView"
+﻿<Controls:MetroWindow x:Class="U3A_Attendance_System.Views.CourseDescriptionEditView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      WindowStyle="None"
-      WindowStartupLocation="CenterScreen" 
-      SizeToContent="WidthAndHeight" 
+      xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+      WindowStartupLocation="CenterScreen"
+      ShowMaxRestoreButton="False"
+      ShowMinButton="False"
       mc:Ignorable="d" 
-      d:DesignHeight="400" d:DesignWidth="450" MaxHeight="400" MinHeight="400" MaxWidth="450" MinWidth="450">
-    <GroupBox  Grid.Column="0" Header="Create Course Description" Margin="10,10,10,10" Grid.RowSpan="2" ClipToBounds="True">
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="40"/>
-                <ColumnDefinition Width="360"/>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="40" />
-                <RowDefinition />
-                <RowDefinition />
-                <RowDefinition />
-                <RowDefinition />
-                <RowDefinition />
-            </Grid.RowDefinitions>
-            <Label Content="Course Name" Grid.Row="1" VerticalAlignment="Bottom" Grid.ColumnSpan="2" Margin="10,0,31,26" />
-            <TextBox x:Name="Title" TextWrapping="Wrap" VerticalAlignment="Top" Height="25" Grid.Row="1" Grid.ColumnSpan="2" Margin="10,41,31,0"/>
-            <Label Content="Course Description" Grid.Row="2" VerticalAlignment="Bottom" Grid.ColumnSpan="2" Margin="10,0,31,0"/>
-            <TextBox x:Name="Description" TextWrapping="Wrap" VerticalAlignment="Top" Grid.Row="3" Height="80" Grid.ColumnSpan="2" Margin="10,10,31,0" />
-            <Button  x:Name="Update" Content="Save" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Column="1" Click="Update_Click" Grid.Row="5" Margin="121,21,0,21" />
-            <Button Content="Cancel" HorizontalAlignment="Right" VerticalAlignment="Center"  Click="Update_Click"  Grid.Column="1" Grid.Row="5" Margin="0,21,167,21" RenderTransformOrigin="-0.68,0.289" />
-        </Grid>
-    </GroupBox>
-</Window>
+      d:DesignHeight="250" d:DesignWidth="450" MaxHeight="250" MinHeight="250" MaxWidth="450" MinWidth="450">
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colours.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="25"/>
+            <ColumnDefinition Width="400"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="30" />
+            <RowDefinition Height="30" />
+            <RowDefinition Height="30" />
+            <RowDefinition />
+            <RowDefinition Height="50" />
+        </Grid.RowDefinitions>
+        <Label Content="Course Name" Grid.Row="0" Grid.Column="1" VerticalAlignment="Bottom" />
+        <TextBox x:Name="Title" TextWrapping="Wrap" VerticalAlignment="Top" Height="25" Grid.Row="1" Grid.Column="1"/>
+        <Label Content="Course Description" Grid.Row="2" Grid.Column="1" VerticalAlignment="Bottom" />
+        <TextBox x:Name="Description" TextWrapping="Wrap" Grid.Row="3" Grid.Column="1" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" />
+        <Button Content="Cancel" HorizontalAlignment="Left" VerticalAlignment="Center"  Click="Update_Click"  Grid.Column="1" Grid.Row="4" />
+        <Button  x:Name="Update" Content="Save" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Column="1" Click="Update_Click" Grid.Row="4" />
+    </Grid>
+</Controls:MetroWindow>
