--- a/U3A_Attendance_System/Views/CourseInstanceSessionEditView.xaml
+++ b/U3A_Attendance_System/Views/CourseInstanceSessionEditView.xaml
@@ -1,44 +1,55 @@
-﻿<Window x:Class="U3A_Attendance_System.Views.CourseInstanceSessionEditView"
+﻿<Controls:MetroWindow x:Class="U3A_Attendance_System.Views.CourseInstanceSessionEditView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:cal="http://www.caliburnproject.org"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             WindowStyle="None"
-             WindowStartupLocation="CenterScreen" 
-             SizeToContent="WidthAndHeight" MaxHeight="300" MinHeight="300" MaxWidth="350" MinWidth="350" Height="278.388" >
+             xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+             WindowStartupLocation="CenterScreen"
+             ShowMaxRestoreButton="False"
+             ShowMinButton="False"
+             Height="250" Width="450" MaxWidth="450" MinWidth="450" >
 
-    <GroupBox  Grid.Column="0" Header="Edit Session" Margin="10,10,10,10" Grid.RowSpan="2" ClipToBounds="True">
-        <Grid Height="318" VerticalAlignment="Top" Margin="0,0,0,-12">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-            </Grid.ColumnDefinitions>
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colours.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
 
-            <Grid.RowDefinitions>
-                <RowDefinition Height="40" />
-                <RowDefinition Height="50" />
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="50" />
-                <RowDefinition Height="50" />
-                <RowDefinition Height="50" />
-            </Grid.RowDefinitions>
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="25" />
+            <ColumnDefinition Width="400" />
+        </Grid.ColumnDefinitions>
 
-            <Label Content="Date" Margin="0,17,37,0"/>
-            <DatePicker Name="SessionStartDate" SelectedDate="{Binding SelectedDate}"  Grid.Column="0" Grid.Row="1" Margin="0,0,0,24" />
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition Height="50" />
+        </Grid.RowDefinitions>
 
-            <Label Content="Venue" Margin="0,38,37,30" Grid.Row="1" Grid.RowSpan="2"/>
-            <ComboBox Name="Venues" DisplayMemberPath="Name" SelectedValuePath="Id" cal:Message.Attach="UpdateLocations" Grid.Column="0" Grid.Row="2" Margin="0,10,0,20" />
+        <Label Content="Date" Grid.Column="1" Grid.Row="0" />
+        <DatePicker Name="SessionStartDate" SelectedDate="{Binding SelectedDate}"  Grid.Column="1" Grid.Row="1" />
 
-            <Label Content="Location" Margin="0,46,37,31" Grid.Row="2" Grid.RowSpan="2"/>
-            <ComboBox Name="Locations" DisplayMemberPath="Room" SelectedValuePath="Id" Grid.Row="3"  Width="106" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0,19,0,0"/>
+        <Label Content="Venue" Grid.Column="1" Grid.Row="2" />
+        <ComboBox Name="Venues" DisplayMemberPath="Name" SelectedValuePath="Id" cal:Message.Attach="UpdateLocations" Grid.Column="1" Grid.Row="3" />
 
-            <Button  Name="Save" Content="Save" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="75" Margin="73,21,0,0"  Grid.Column="0" Grid.Row="4" Click="Save_Click"/>
-            <Button  Name="Cancel" Content="Cancel" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="75" Margin="168,21,0,0"  Grid.Column="0" Grid.Row="4" Click="Cancel_Click" RenderTransformOrigin="0.525,0.362" />
+        <Label Content="Location" Grid.Column="1" Grid.Row="4"/>
+        <ComboBox Name="Locations" DisplayMemberPath="Room" SelectedValuePath="Id" Grid.Column="1" Grid.Row="5"  Width="106" VerticalAlignment="Top" HorizontalAlignment="Left" />
 
+        <Button  Name="Cancel" Content="Cancel" HorizontalAlignment="Left"  VerticalAlignment="Center" Grid.Column="1" Grid.Row="6" Click="Cancel_Click" />
+        <Button  Name="Save" Content="Save" HorizontalAlignment="Right"  VerticalAlignment="Center"  Grid.Column="1" Grid.Row="6" Click="Save_Click"/>
+    </Grid>
 
-
-        </Grid>
-    </GroupBox>
-
-</Window>
+</Controls:MetroWindow>
 
