--- a/U3A_Attendance_System/Views/MainView.xaml
+++ b/U3A_Attendance_System/Views/MainView.xaml
@@ -1,24 +1,31 @@
-﻿<Window x:Class="U3A_Attendance_System.Views.MainView"
+﻿<Controls:MetroWindow x:Class="U3A_Attendance_System.Views.MainView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+        xmlns:cal="http://www.caliburnproject.org"
         mc:Ignorable="d"
         xmlns:userControls="a"
         d:DesignWidth="1000" d:DesignHeight="1000">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="50" />
-            <RowDefinition />
-        </Grid.RowDefinitions>
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colours.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
+    <Controls:MetroWindow.WindowCommands>
+        <Controls:WindowCommands>
+            <Button Content="home" cal:Message.Attach="ShowHome" />
+        </Controls:WindowCommands>
+    </Controls:MetroWindow.WindowCommands>
 
-        <StackPanel Grid.Row="0">
-            <Button x:Name="ShowTabbedView" Content="Back" HorizontalAlignment="Left" VerticalAlignment="Bottom"/>
-        </StackPanel>
-
-        <ContentControl Grid.Row="1" x:Name="ActiveItem" VerticalAlignment="Stretch"></ContentControl>
-
-    </Grid>
+    <ContentControl Grid.Row="1" x:Name="ActiveItem" VerticalAlignment="Stretch"></ContentControl>
     
 
-</Window>
+</Controls:MetroWindow>
